DQN Draft finished

--- a/lander.ipynb
+++ b/lander.ipynb
@@ -28,16 +28,17 @@
         "  gym==0.21\\\n",
         "  gym[box2d]==0.21\\\n",
         "  pyvirtualdisplay\\\n",
-        "  pyglet==1.5.27 \\"
+        "  pyglet==1.5.27 \\\n",
+        "  colabgymrender"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wG_5lJH9sCb4",
-        "outputId": "9237160f-7745-40f8-b6bd-2d86f04a57d1"
+        "outputId": "70924e7d-e148-4836-8b1d-8358ceb311ef"
       },
-      "execution_count": 1,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -77,7 +78,6 @@
             "running install_lib\n",
             "running build_py\n",
             "running build_ext\n",
-            "copying library/Box2D/__init__.py -> build/lib.linux-x86_64-3.8/Box2D\n",
             "creating build/bdist.linux-x86_64/egg\n",
             "creating build/bdist.linux-x86_64/egg/Box2D\n",
             "copying build/lib.linux-x86_64-3.8/Box2D/__init__.py -> build/bdist.linux-x86_64/egg/Box2D\n",
@@ -477,9 +477,24 @@
             "Requirement already satisfied: gym==0.21 in /usr/local/lib/python3.8/dist-packages (0.21.0)\n",
             "Requirement already satisfied: pyvirtualdisplay in /usr/local/lib/python3.8/dist-packages (3.0)\n",
             "Requirement already satisfied: pyglet==1.5.27 in /usr/local/lib/python3.8/dist-packages (1.5.27)\n",
+            "Collecting colabgymrender\n",
+            "  Downloading colabgymrender-1.1.0.tar.gz (3.5 kB)\n",
             "Requirement already satisfied: numpy>=1.18.0 in /usr/local/lib/python3.8/dist-packages (from gym==0.21) (1.21.6)\n",
             "Requirement already satisfied: cloudpickle>=1.2.0 in /usr/local/lib/python3.8/dist-packages (from gym==0.21) (1.5.0)\n",
-            "Requirement already satisfied: box2d-py==2.3.5 in /usr/local/lib/python3.8/dist-packages (from gym==0.21) (2.3.5)\n"
+            "Requirement already satisfied: box2d-py==2.3.5 in /usr/local/lib/python3.8/dist-packages (from gym==0.21) (2.3.5)\n",
+            "Requirement already satisfied: moviepy in /usr/local/lib/python3.8/dist-packages (from colabgymrender) (0.2.3.5)\n",
+            "Requirement already satisfied: imageio<3.0,>=2.1.2 in /usr/local/lib/python3.8/dist-packages (from moviepy->colabgymrender) (2.9.0)\n",
+            "Requirement already satisfied: decorator<5.0,>=4.0.2 in /usr/local/lib/python3.8/dist-packages (from moviepy->colabgymrender) (4.4.2)\n",
+            "Requirement already satisfied: tqdm<5.0,>=4.11.2 in /usr/local/lib/python3.8/dist-packages (from moviepy->colabgymrender) (4.64.1)\n",
+            "Requirement already satisfied: pillow in /usr/local/lib/python3.8/dist-packages (from imageio<3.0,>=2.1.2->moviepy->colabgymrender) (7.1.2)\n",
+            "Building wheels for collected packages: colabgymrender\n",
+            "  Building wheel for colabgymrender (setup.py): started\n",
+            "  Building wheel for colabgymrender (setup.py): finished with status 'done'\n",
+            "  Created wheel for colabgymrender: filename=colabgymrender-1.1.0-py3-none-any.whl size=3130 sha256=36b9541a5211e88d8aa14148410ca9188023f04bba288518fafebe43dd65fc80\n",
+            "  Stored in directory: /root/.cache/pip/wheels/e4/d2/e1/cc1c940178ad92438325422b51c3e8c3d927b9ef8381da8840\n",
+            "Successfully built colabgymrender\n",
+            "Installing collected packages: colabgymrender\n",
+            "Successfully installed colabgymrender-1.1.0\n"
           ]
         },
         {
@@ -519,13 +534,269 @@
         "from gym.wrappers import RecordVideo\n",
         "import warnings\n",
         "\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "import matplotlib.pyplot as plt\n",
+        "from typing import Sequence\n",
+        "from collections import namedtuple, deque\n",
+        "import itertools\n",
+        "import random\n",
+        "\n",
         "warnings.filterwarnings(\"ignore\")"
       ],
       "metadata": {
         "id": "NcKK5kqMJogc"
       },
-      "execution_count": 2,
+      "execution_count": 12,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "GAMMA = 0.99\n",
+        "BATCH_SIZE = 64\n",
+        "BUFFER_SIZE = 10000\n",
+        "MIN_REPLAY_SIZE = 5000\n",
+        "EPS_START = 1.0\n",
+        "EPS_END = 0.05\n",
+        "EPS_DECAY = 0.995\n",
+        "TARGET_UPDATE_FREQ = 5"
+      ],
+      "metadata": {
+        "id": "nI3vEhXkk8GL"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "env = gym.make('LunarLander-v2')\n",
+        "env = RecordVideo(env, 'videos', episode_trigger=lambda e: True)\n",
+        "\n",
+        "state = env.reset()\n",
+        "e_reward = 0.0"
+      ],
+      "metadata": {
+        "id": "hyY-bUr7jtdC"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Transition = namedtuple('Transition', ('states', 'actions', 'rewards', 'dones', 'next_states'))\n",
+        "\n",
+        "class Replay_memory():\n",
+        "  def __init__(self, env, fullsize, minsize, batchsize):\n",
+        "    self.env = env\n",
+        "    self.memory = deque(maxlen=fullsize)\n",
+        "    self.rewards = deque(maxlen=50)\n",
+        "    self.batchsize = batchsize\n",
+        "    self.minsize = minsize\n",
+        "  \n",
+        "  def append(self,transition):\n",
+        "    self.memory.append(transition)\n",
+        "\n",
+        "  def sample_batch(self):\n",
+        "      batch = random.sample(self.memory, self.batchsize)\n",
+        "      batch = Transition(*zip(*batch))\n",
+        "      states = torch.from_numpy(np.array(batch.states, dtype=np.float32))\n",
+        "      actions = torch.from_numpy(np.array(batch.actions, dtype=np.int64)).unsqueeze(1)\n",
+        "      rewards = torch.from_numpy(np.array(batch.rewards, dtype=np.float32)).unsqueeze(1)\n",
+        "      dones = torch.from_numpy(np.array(batch.dones, dtype=np.bool8)).unsqueeze(1)\n",
+        "      next_states = torch.from_numpy(np.array(batch.next_states, dtype=np.float32))\n",
+        "      return states, actions, rewards, dones, next_states\n",
+        "\n",
+        "  def initialize(self):\n",
+        "    obs = env.reset()\n",
+        "    for _ in range(self.minsize):\n",
+        "        action = self.env.action_space.sample()\n",
+        "        new_obs, reward, done, info = env.step(action)\n",
+        "        transition = Transition(obs, action, reward, done, new_obs)\n",
+        "        self.append(transition)\n",
+        "        obs = new_obs\n",
+        "        if done:\n",
+        "            self.env.reset()\n",
+        "    return self"
+      ],
+      "metadata": {
+        "id": "Gwr6u6u6j4DL"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "replay_memory = Replay_memory(env, BUFFER_SIZE, MIN_REPLAY_SIZE, BATCH_SIZE).initialize()"
+      ],
+      "metadata": {
+        "id": "_gUTGnHtj4U_"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class DQN(nn.Module):\n",
+        "    def __init__(self, ninputs, noutputs):\n",
+        "        super(DQN, self).__init__()\n",
+        "        self.a1 = nn.Linear(ninputs, 64)\n",
+        "        self.a2 = nn.Linear(64, noutputs)\n",
+        "    \n",
+        "    def forward(self, X):\n",
+        "        o = self.a1(X)\n",
+        "        o = torch.tanh(o)\n",
+        "        o = self.a2(o)\n",
+        "        return o\n",
+        "    \n",
+        "    def __call__(self, X):\n",
+        "        return self.forward(X)"
+      ],
+      "metadata": {
+        "id": "YDYNYHs1j4ZF"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dqn_policy = DQN(env.observation_space.shape[0], env.action_space.n)\n",
+        "dqn_target = DQN(env.observation_space.shape[0], env.action_space.n)\n",
+        "dqn_target.load_state_dict(dqn_policy.state_dict())\n",
+        "dqn_target.eval()"
+      ],
+      "metadata": {
+        "id": "aOK4T49bmPqN",
+        "outputId": "9ed351b1-fae1-4910-a94c-d4883b070dca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DQN(\n",
+              "  (a1): Linear(in_features=8, out_features=64, bias=True)\n",
+              "  (a2): Linear(in_features=64, out_features=4, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss_fn = nn.SmoothL1Loss()\n",
+        "learning_rate = 0.001\n",
+        "optimizer = torch.optim.Adam(dqn_policy.parameters(), lr=learning_rate)"
+      ],
+      "metadata": {
+        "id": "rueEzZOomPzX"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def epsilon_greedy_policy(epsilon, obs):\n",
+        "    rnd_sample = random.random()\n",
+        "    if rnd_sample <= epsilon:\n",
+        "        action = env.action_space.sample()\n",
+        "    else:\n",
+        "        with torch.no_grad():\n",
+        "            action = int(torch.argmax(dqn_policy(torch.Tensor(obs))))\n",
+        "    return action"
+      ],
+      "metadata": {
+        "id": "gqTd0j_imVa0"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "obs = env.reset()\n",
+        "eps_threshold =EPS_START\n",
+        "episode = 1\n",
+        "\n",
+        "for step in itertools.count():\n",
+        "    action = epsilon_greedy_policy(eps_threshold, obs)\n",
+        "    new_obs, reward, done, _ = env.step(action)\n",
+        "    replay_memory.append(Transition(obs, action, reward, done, new_obs))\n",
+        "    e_reward += reward\n",
+        "    obs = new_obs\n",
+        "    \n",
+        "    if done:\n",
+        "        episode += 1\n",
+        "        eps_threshold = np.max((eps_threshold*EPS_DECAY, EPS_END))\n",
+        "        replay_memory.rewards.append(e_reward)\n",
+        "        obs = env.reset()\n",
+        "        avg_res = np.mean(replay_memory.rewards)\n",
+        "\n",
+        "        if episode % 100 == 0: \n",
+        "            avg_res = np.mean(replay_memory.rewards)\n",
+        "            print(f'Episode: {episode} Avg Results: {avg_res} Epsilon: {eps_threshold}')\n",
+        "\n",
+        "        if avg_res >= 475:\n",
+        "            print(f'Solved at episode: {episode} Avg Results: {avg_res}')\n",
+        "            break\n",
+        "        \n",
+        "        if step % TARGET_UPDATE_FREQ == 0:\n",
+        "            dqn_target.load_state_dict(dqn_policy.state_dict())\n",
+        "\n",
+        "        episode_reward = 0\n",
+        "\n",
+        "    b_states, b_actions, b_rewards, b_dones, b_next_states = replay_memory.sample_batch()\n",
+        "\n",
+        "    qvalues = dqn_policy(b_states).gather(1, b_actions)\n",
+        "    \n",
+        "    with torch.no_grad():\n",
+        "        target_qvalues = dqn_target(b_next_states)\n",
+        "        max_target_qvalues = torch.max(target_qvalues, axis=1).values.unsqueeze(1)\n",
+        "        expected_qvalues = b_rewards + GAMMA * (1 - b_dones.type(torch.int64)) * max_target_qvalues\n",
+        "\n",
+        "    loss = loss_fn(qvalues, expected_qvalues)\n",
+        "    optimizer.zero_grad()\n",
+        "    loss.backward()\n",
+        "    for param in dqn_policy.parameters():\n",
+        "        param.grad.data.clamp_(-1, 1)\n",
+        "    optimizer.step()"
+      ],
+      "metadata": {
+        "id": "0lUdcvwspLPA",
+        "outputId": "aa4b4bd9-be2a-4649-9e8a-e0d51ff3b522",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Episode: 100 Avg Results: -9566.043994023295 Epsilon: 0.6088145090359074\n",
+            "Episode: 200 Avg Results: -12811.073511182138 Epsilon: 0.36880183088056995\n",
+            "Episode: 300 Avg Results: -10231.481288749681 Epsilon: 0.22340924607110255\n",
+            "Episode: 400 Avg Results: -4850.244689054131 Epsilon: 0.1353347165085562\n",
+            "Solved at episode: 452 Avg Results: 582.2902656179483\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -535,32 +806,15 @@
       },
       "outputs": [],
       "source": [
-        "# import gym\n",
+        "# for episode in range(10):\n",
+        "#   done = False\n",
+        "#   state = env.reset()\n",
         "\n",
-        "# env = gym.make(\"LunarLander-v2\")\n",
+        "#   while not done:\n",
+        "#     action = env.action_space.sample()\n",
+        "#     state, _, done, _ = env.step(action)\n",
         "\n",
-        "\n",
-        "# env = env.reset()\n",
-        "\n",
-        "# for _ in range(1000):\n",
-        "#     next_obs, reward, done, info = env.step(env.action_space.sample())\n",
-        "\n",
-        "#     if term or trunc:\n",
-        "#         obs,info = env.rest()\n",
-        "\n",
-        "# env.close()\n",
-        "env = gym.make('LunarLander-v2')\n",
-        "env = RecordVideo(env, 'videos', episode_trigger=lambda e: True)\n",
-        "\n",
-        "for episode in range(10):\n",
-        "  done = False\n",
-        "  state = env.reset()\n",
-        "\n",
-        "  while not done:\n",
-        "    action = env.action_space.sample()\n",
-        "    state, _, done, _ = env.step(action)\n",
-        "\n",
-        "del env"
+        "# del env"
       ]
     }
   ],
