--- a/lander.ipynb
+++ b/lander.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/SilentClaw27/AdvancedRL/blob/main/lander.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -12,43 +12,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "%%bash\n",
-        "\n",
-        "apt-get install swig\n",
-        "\n",
-        "git clone https://github.com/pybox2d/pybox2d\n",
-        "cd pybox2d\n",
-        "python setup.py build\n",
-        "python setup.py install\n",
-        "\n",
-        "apt-get install -y xvfb\n",
-        "\n",
-        "pip install \\\n",
-        "  gym==0.21\\\n",
-        "  gym[box2d]==0.21\\\n",
-        "  pyvirtualdisplay\\\n",
-        "  pyglet==1.5.27 \\\n",
-        "  colabgymrender"
-      ],
+      "execution_count": 1,
       "metadata": {
-        "id": "wG_5lJH9sCb4"
+        "id": "NcKK5kqMJogc"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
+      "outputs": [],
       "source": [
-        "from pyvirtualdisplay import Display\n",
-        "Display(visible=False, size=(1400, 900)).start()\n",
-        "\n",
-        "import gym\n",
+        "import gymnasium as gym\n",
         "import numpy as np\n",
-        "import pyglet\n",
-        "from gym.wrappers import RecordVideo\n",
-        "import warnings\n",
-        "\n",
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.nn.functional as F\n",
@@ -57,50 +28,52 @@
         "from collections import namedtuple, deque\n",
         "import itertools\n",
         "import random\n",
-        "\n",
-        "warnings.filterwarnings(\"ignore\")"
-      ],
-      "metadata": {
-        "id": "NcKK5kqMJogc"
-      },
-      "execution_count": 35,
-      "outputs": []
+        "import warnings\n",
+        "import time\n",
+        "import os\n",
+        "warnings.filterwarnings(\"ignore\")\n",
+        "os.environ['CUDA_VISIBLE_DEVICES'] ='0'"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {
+        "id": "nI3vEhXkk8GL"
+      },
+      "outputs": [],
       "source": [
         "GAMMA = 0.99\n",
-        "BATCH_SIZE = 64\n",
+        "BATCH_SIZE = 128\n",
         "BUFFER_SIZE = 10000\n",
         "MIN_REPLAY_SIZE = 5000\n",
         "EPS_START = 1.0\n",
         "EPS_END = 0.05\n",
         "EPS_DECAY = 0.995\n",
         "TARGET_UPDATE_FREQ = 5"
-      ],
-      "metadata": {
-        "id": "nI3vEhXkk8GL"
-      },
-      "execution_count": 36,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "env = gym.make('LunarLander-v2')\n",
-        "env = RecordVideo(env, 'videos', episode_trigger=lambda e: True)\n",
-        "\n",
-        "state = env.reset()\n",
-        "e_reward = 0.0"
-      ],
+      "execution_count": 20,
       "metadata": {
         "id": "hyY-bUr7jtdC"
       },
-      "execution_count": 37,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "env = gym.make('LunarLander-v2')\n",
+        "\n",
+        "obs, info = env.reset()\n",
+        "episode_reward = 0.0"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {
+        "id": "Gwr6u6u6j4DL"
+      },
+      "outputs": [],
       "source": [
         "Transition = namedtuple('Transition', ('states', 'actions', 'rewards', 'dones', 'next_states'))\n",
         "\n",
@@ -126,36 +99,36 @@
         "      return states, actions, rewards, dones, next_states\n",
         "\n",
         "  def initialize(self):\n",
-        "    obs = env.reset()\n",
+        "    obs, info = env.reset()\n",
         "    for _ in range(self.minsize):\n",
         "        action = self.env.action_space.sample()\n",
-        "        new_obs, reward, done, info = env.step(action)\n",
+        "        new_obs, reward, done, info = env.step(action)[:4]\n",
         "        transition = Transition(obs, action, reward, done, new_obs)\n",
         "        self.append(transition)\n",
         "        obs = new_obs\n",
         "        if done:\n",
         "            self.env.reset()\n",
         "    return self"
-      ],
-      "metadata": {
-        "id": "Gwr6u6u6j4DL"
-      },
-      "execution_count": 38,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "replay_memory = Replay_memory(env, BUFFER_SIZE, MIN_REPLAY_SIZE, BATCH_SIZE).initialize()"
-      ],
+      "execution_count": 22,
       "metadata": {
         "id": "_gUTGnHtj4U_"
       },
-      "execution_count": 39,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "replay_memory = Replay_memory(env, BUFFER_SIZE, MIN_REPLAY_SIZE, BATCH_SIZE).initialize()"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {
+        "id": "YDYNYHs1j4ZF"
+      },
+      "outputs": [],
       "source": [
         "class DQN(nn.Module):\n",
         "    def __init__(self, ninputs, noutputs):\n",
@@ -165,38 +138,26 @@
         "    \n",
         "    def forward(self, X):\n",
         "        o = self.a1(X)\n",
-        "        o = torch.tanh(o)\n",
+        "        o = F.relu(o)\n",
         "        o = self.a2(o)\n",
         "        return o\n",
         "    \n",
         "    def __call__(self, X):\n",
         "        return self.forward(X)"
-      ],
-      "metadata": {
-        "id": "YDYNYHs1j4ZF"
-      },
-      "execution_count": 40,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "dqn_policy = DQN(env.observation_space.shape[0], env.action_space.n)\n",
-        "dqn_target = DQN(env.observation_space.shape[0], env.action_space.n)\n",
-        "dqn_target.load_state_dict(dqn_policy.state_dict())\n",
-        "dqn_target.eval()"
-      ],
+      "execution_count": 24,
       "metadata": {
-        "id": "aOK4T49bmPqN",
-        "outputId": "7323024d-ecbf-4a19-d0db-30eb12b5fd98",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aOK4T49bmPqN",
+        "outputId": "7323024d-ecbf-4a19-d0db-30eb12b5fd98"
       },
-      "execution_count": 41,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "DQN(\n",
@@ -205,26 +166,37 @@
               ")"
             ]
           },
+          "execution_count": 24,
           "metadata": {},
-          "execution_count": 41
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "dqn_policy = DQN(env.observation_space.shape[0], env.action_space.n)\n",
+        "dqn_target = DQN(env.observation_space.shape[0], env.action_space.n)\n",
+        "dqn_target.load_state_dict(dqn_policy.state_dict())\n",
+        "dqn_target.eval()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "loss_fn = nn.SmoothL1Loss()\n",
-        "learning_rate = 0.001\n",
-        "optimizer = torch.optim.Adam(dqn_policy.parameters(), lr=learning_rate)"
-      ],
+      "execution_count": 25,
       "metadata": {
         "id": "rueEzZOomPzX"
       },
-      "execution_count": 42,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "loss_fn = nn.SmoothL1Loss()\n",
+        "optimizer = torch.optim.Adam(dqn_policy.parameters(), lr=0.001)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {
+        "id": "gqTd0j_imVa0"
+      },
+      "outputs": [],
       "source": [
         "def epsilon_greedy_policy(epsilon, obs):\n",
         "    rnd_sample = random.random()\n",
@@ -234,32 +206,51 @@
         "        with torch.no_grad():\n",
         "            action = int(torch.argmax(dqn_policy(torch.Tensor(obs))))\n",
         "    return action"
-      ],
-      "metadata": {
-        "id": "gqTd0j_imVa0"
-      },
-      "execution_count": 43,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0lUdcvwspLPA",
+        "outputId": "305ee25e-21dc-43fd-b929-ff30e66c3729"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Episode: 50 Avg Results: -122.37846243139677 Epsilon: 0.7822236754458713\n",
+            "Episode: 100 Avg Results: -73.41797039904563 Epsilon: 0.6088145090359074\n",
+            "Episode: 150 Avg Results: -55.79774112326688 Epsilon: 0.4738479773082268\n",
+            "Episode: 200 Avg Results: -52.972174638869035 Epsilon: 0.36880183088056995\n",
+            "Episode: 250 Avg Results: -24.799709340111573 Epsilon: 0.28704309604425327\n",
+            "Episode: 300 Avg Results: 46.57133272405362 Epsilon: 0.22340924607110255\n",
+            "Episode: 350 Avg Results: 155.9346742371871 Epsilon: 0.17388222158237718\n",
+            "Solved at episode: 372 Avg Results: 195.77401234069188\n"
+          ]
+        }
+      ],
       "source": [
-        "obs = env.reset()\n",
+        "obs, info = env.reset()\n",
         "eps_threshold =EPS_START\n",
         "episode = 1\n",
         "\n",
         "for step in itertools.count():\n",
         "    action = epsilon_greedy_policy(eps_threshold, obs)\n",
-        "    new_obs, reward, done, _ = env.step(action)\n",
-        "    replay_memory.append(Transition(obs, action, reward, done, new_obs))\n",
-        "    e_reward += reward\n",
+        "    new_obs, reward, terminated,truncated, _ = env.step(action)\n",
+        "    replay_memory.append(Transition(obs, action, reward, terminated, new_obs))\n",
+        "    episode_reward += reward\n",
         "    obs = new_obs\n",
         "    \n",
-        "    if done:\n",
+        "    if terminated or truncated:\n",
         "        episode += 1\n",
         "        eps_threshold = np.max((eps_threshold*EPS_DECAY, EPS_END))\n",
-        "        replay_memory.rewards.append(e_reward)\n",
-        "        obs = env.reset()\n",
+        "        replay_memory.rewards.append(episode_reward)\n",
+        "        obs,info = env.reset()\n",
         "        avg_res = np.mean(replay_memory.rewards)\n",
         "\n",
         "        if episode % 50 == 0: \n",
@@ -290,31 +281,6 @@
         "    for param in dqn_policy.parameters():\n",
         "        param.grad.data.clamp_(-1, 1)\n",
         "    optimizer.step()"
-      ],
-      "metadata": {
-        "id": "0lUdcvwspLPA",
-        "outputId": "305ee25e-21dc-43fd-b929-ff30e66c3729",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 44,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Episode: 50 Avg Results: -3766.069586724057 Epsilon: 0.7822236754458713\n",
-            "Episode: 100 Avg Results: -8908.689987152695 Epsilon: 0.6088145090359074\n",
-            "Episode: 150 Avg Results: -11614.187731973845 Epsilon: 0.4738479773082268\n",
-            "Episode: 200 Avg Results: -12041.995406489908 Epsilon: 0.36880183088056995\n",
-            "Episode: 250 Avg Results: -12240.544830860514 Epsilon: 0.28704309604425327\n",
-            "Episode: 300 Avg Results: -11380.08800536544 Epsilon: 0.22340924607110255\n",
-            "Episode: 350 Avg Results: -9378.474030956062 Epsilon: 0.17388222158237718\n",
-            "Episode: 400 Avg Results: -4783.236330901511 Epsilon: 0.1353347165085562\n",
-            "Solved at episode: 436 Avg Results: 279.29580320292547\n"
-          ]
-        }
       ]
     },
     {
@@ -338,8 +304,12 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
-      "display_name": "venv",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
@@ -353,17 +323,13 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.9"
+      "version": "3.9.13"
     },
     "orig_nbformat": 4,
     "vscode": {
       "interpreter": {
-        "hash": "5bab6980fee78fae71063a5c532eb71480fd5c5c2d857272c587d3182c09e720"
+        "hash": "e60e170a43f951995987d5f861e903e8cddcd13fd622fefc94b6b25d6f35233f"
       }
-    },
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
     }
   },
   "nbformat": 4,
