--- a/lander.ipynb
+++ b/lander.ipynb
@@ -309,7 +309,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "base",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -323,12 +323,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
     },
     "orig_nbformat": 4,
     "vscode": {
       "interpreter": {
-        "hash": "e60e170a43f951995987d5f861e903e8cddcd13fd622fefc94b6b25d6f35233f"
+        "hash": "a7254ae99f506ce767c12792eaa1cd169f52d580d915c30f52763ea2c90cf8bb"
       }
     }
   },
